--- a/src/lib/styles/styles.css
+++ b/src/lib/styles/styles.css
@@ -45,8 +45,8 @@
 	--bg-v-3: var(--color-v-7);
 
 	/* Fonts */
-	--font-family-title: 'Canela Deck', serif;
-	--font-family-body: 'Plane', sans-serif;
+	--font-family-title: 'Canela Deck', sans-serif;
+	--font-family-body: 'Plane', monospace;
 	--font-size: 16px;
 
 	/* More info: https://www.fluid-type-scale.com/calculate?minFontSize=16&minWidth=400&minRatio=1.125&maxFontSize=18&maxWidth=1280&maxRatio=1.25&steps=sm%2Cbase%2Cmd%2Clg%2Cxl%2Cxxl%2Cxxxl&baseStep=base&prefix=font-size&decimals=4&useRems=on&remValue=16&previewFont=Inter */
